--- a/margin_register/src/main/res/layout/register_activity_register.xml
+++ b/margin_register/src/main/res/layout/register_activity_register.xml
@@ -4,58 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+   >
 
     <TextView
-        android:id="@+id/tv_main_hello"
+        android:id="@+id/abtn_register_hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="this is register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-       />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/abtn_main_login"
+        android:id="@+id/abtn_register_btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="go2Login"
+        android:text="go2 Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_main_hello" />
+        app:layout_constraintTop_toBottomOf="@+id/abtn_register_hello" />
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/abtn_main_register"
+        android:id="@+id/abtn_register_btn2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="go2Register"
+        android:text="go Home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/abtn_main_login" />
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/abtn_main_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="goHome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/abtn_main_register" />
+        app:layout_constraintTop_toBottomOf="@+id/abtn_register_btn1" />
 
 </android.support.constraint.ConstraintLayout>
