--- a/margin_register/src/main/res/values/styles.xml
+++ b/margin_register/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="register_AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/register_colorPrimary</item>
+        <item name="colorPrimaryDark">@color/register_colorPrimaryDark</item>
+        <item name="colorAccent">@color/register_colorAccent</item>
     </style>
 
 </resources>
