--- a/margin_login/src/main/res/layout/login_activity_login.xml
+++ b/margin_login/src/main/res/layout/login_activity_login.xml
@@ -7,7 +7,7 @@
     tools:context=".LoginActivity">
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/login_appcompattextview"
+        android:id="@+id/atv_login_hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -35,7 +35,7 @@
         android:text="go2Home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_appcompattextview" />
+        app:layout_constraintTop_toBottomOf="@+id/atv_login_hello" />
 
     <android.support.v7.widget.AppCompatButton
         android:layout_width="match_parent"
